--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ plyer = "^2.1.0"
 pyaudio = "^0.2.14"
 pytz = "^2024.1"
 pyinstaller = "^6.7.0"
+psutil = "^6.0.0"
 
 [tool.poetry.group.dev]
 optional = true
