fix: qrcode show

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ pycryptodome = "^3.20.0"
 pyyaml = "^6.0.1"
 inquirer = "^3.2.4"
 qrcode = "^7.4.2"
+pillow = "^10.3.0"
 selenium = "^4.21.0"
 pybrowsers = "^0.6.0"
 py-machineid = "^0.5.1"
