--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,6 +37,7 @@ pre-commit = "^3.7.1"
 isort = "^5.13.2"
 black = "^24.4.2"
 flake8 = "^7.0.0"
+pylint = "^3.2.4"
 pyupgrade = "^3.15.2"
 snakeviz = "^2.2.0"
 
