--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -13,29 +13,11 @@ repos:
       - id: fix-byte-order-marker
       - id: mixed-line-ending
 
-  - repo: https://github.com/asottile/pyupgrade
-    rev: v3.16.0
+  - repo: https://github.com/astral-sh/ruff-pre-commit
+    rev: v0.5.0
     hooks:
-      - id: pyupgrade
-        args: [--py311-plus]
-
-  - repo: https://github.com/PyCQA/isort
-    rev: 5.13.2
-    hooks:
-      - id: isort
-
-  - repo: https://github.com/psf/black-pre-commit-mirror
-    rev: 24.4.2
-    hooks:
-      - id: black
-
-  - repo: https://github.com/PyCQA/flake8
-    rev: 7.0.0
-    hooks:
-    -   id: flake8
-        entry: pflake8
-        additional_dependencies: [pyproject-flake8]
-
+        - id: ruff
+        - id: ruff-format
 ci:
     autoupdate_schedule: weekly
     skip: []
