--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -17,6 +17,7 @@ repos:
     rev: v0.5.0
     hooks:
         - id: ruff
+          args: [ --fix ]
         - id: ruff-format
 ci:
     autoupdate_schedule: weekly
