--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 altgraph==0.17.4
-anyio==4.6.0
+anyio==4.6.2.post1
 attrs==24.2.0
 bili_ticket_gt_python==0.2.7
 blessed==1.20.0
@@ -19,7 +19,7 @@ outcome==1.3.0.post0
 packaging==24.1
 pillow==10.4.0
 plyer==2.1.0
-psutil==6.0.0
+psutil==6.1.0
 py-machineid==0.5.1
 PyAudio==0.2.14
 pybrowsers==0.6.0
@@ -32,14 +32,14 @@ PyYAML==6.0.2
 qrcode==7.4.2
 readchar==4.2.0
 runs==1.2.2
-selenium==4.25.0
-setuptools==75.1.0
+selenium==4.26.1
+setuptools==75.3.0
 six==1.16.0
 sniffio==1.3.1
 socksio==1.0.0
 sortedcontainers==2.4.0
 transitions==0.9.2
-trio==0.26.2
+trio==0.27.0
 trio-websocket==0.11.1
 typing_extensions==4.12.2
 urllib3==2.2.3
