--- a/requirements.txt
+++ b/requirements.txt
@@ -1,31 +1,42 @@
-altgraph==0.17.4
-anyio==4.6.2.post1
+anyio==4.7.0
 attrs==24.2.0
 bili_ticket_gt_python==0.2.7
 blessed==1.20.0
 certifi==2024.8.30
+cffi==1.17.1
+cfgv==3.4.0
+distlib==0.3.8
+editdistance_s==1.0.0
 editor==1.6.6
 fake-useragent==1.5.1
+filelock==3.16.1
 h11==0.14.0
 h2==4.1.0
 hpack==4.0.0
 httpcore==1.0.7
 httpx==0.27.2
 hyperframe==6.0.1
+identify==2.6.2
 idna==3.10
+iniconfig==2.0.0
 inquirer==3.4.0
-loguru==0.7.2
+loguru==0.7.3
+nodeenv==1.9.1
 outcome==1.3.0.post0
-packaging==24.2
+packaging==24.1
 pillow==10.4.0
+platformdirs==4.3.6
+pluggy==1.5.0
 plyer==2.1.0
 psutil==6.1.0
 py-machineid==0.5.1
 PyAudio==0.2.14
 pybrowsers==0.6.0
+pycparser==2.22
 pycryptodome==3.21.0
 pypng==0.20220715.0
 PySocks==1.7.1
+pytest==8.3.3
 pytz==2024.2
 pyxdg==0.28
 PyYAML==6.0.2
@@ -33,15 +44,16 @@ qrcode==7.4.2
 readchar==4.2.1
 runs==1.2.2
 selenium==4.27.1
-setuptools==75.6.0
-six==1.16.0
+six==1.17.0
 sniffio==1.3.1
 socksio==1.0.0
 sortedcontainers==2.4.0
+toml==0.10.2
 transitions==0.9.2
 trio==0.27.0
 trio-websocket==0.11.1
 typing_extensions==4.12.2
+ukkonen==1.0.1
 urllib3==2.2.3
 wcwidth==0.2.13
 websocket-client==1.8.0
